Provision API doc for 1. ReferrerCheckSignupEmail; 2.ApplicantCheckSignupEmail; 3.ActivateAndSignup;
