# handler/handler.go
@@ -21,35 +21,37 @@ type Env struct {
 	PublicKey	string
 }
 
-// @Title ReferrerSignup
-// @Summary ReferrerSignup
-// @Description ReferrerSignup
+// @Title ReferrerCheckSignupEmail
+// @Summary ReferrerCheckSignupEmail
+// @Description Onboarding user will provide a company email to sign up for the referral portal, if the email does not
+// exists in schemaless database, we will send the email an activation link
 // @Accept  json
-// @Param body body model.ReferrerSignupEmailStruct true "Body JSON"
-// @Example "{"email":"chaoran@uber.com"}"
-// @Success 200 {object} model.ReferrerSignupSuccessStruct "Success: verification email sent"
-// @Failure 400 {object} model.ReferrerSignupAPIError0 "email cannot be empty"
-// @Failure 400 {object} model.ReferrerSignupAPIError1 "email already registered"
-// @Router /referrer_signup [post]
-func ReferrerSignup(env *Env) func(ctx *gin.Context) {
-	return Signup(env, "referrer")
+// @Param body body model.ReferrerSignupEmailRequest true "ReferrerSignupEmailRequest is a POST JSON type"
+// @Example "{"Email":"chaoran@uber.com"}"
+// @Success 200 {object} model.ReferrerSignupResponseSuccess "Success: verification email sent"
+// @Failure 400 {object} model.ReferrerSignupResponseAPIError0 "email cannot be empty"
+// @Failure 400 {object} model.ReferrerSignupResponseAPIError1 "email already registered"
+// @Router /referrer_check_signup_email [post]
+func ReferrerCheckSignupEmail(env *Env) func(ctx *gin.Context) {
+	return CheckSignupEmail(env, "referrer")
 }
 
-// @Title ApplicantSignup
-// @Summary ApplicantSignup
-// @Description ApplicantSignup
+// @Title ApplicantCheckSignupEmail
+// @Summary ApplicantCheckSignupEmail
+// @Description Provide a school/university edu email to sign up for the applicant portal, if the email does not
+// exists in schemaless database, we will send the email an activation link
 // @Accept  json
-// @Param body body model.ApplicantSignupEmailStruct true "Body JSON"
-// @Example "{"email":"wang374@uiuc.edu"}"
-// @Success 200 {object} model.ApplicantSignupSuccessStruct "Success: verification email sent"
-// @Failure 400 {object} model.ApplicantSignupAPIError0 "email cannot be empty"
-// @Failure 400 {object} model.ApplicantSignupAPIError1 "email already registered"
-// @Router /applicant_signup [post]
-func ApplicantSignup(env *Env) func(ctx *gin.Context) {
-	return Signup(env, "applicant")
+// @Param body body model.ApplicantSignupEmailRequest true "ApplicantSignupEmailRequest is a POST JSON type"
+// @Example "{"Email":"wang374@uiuc.edu"}"
+// @Success 200 {object} model.ApplicantSignupResponseSuccess "Success: verification email sent"
+// @Failure 400 {object} model.ApplicantSignupResponseAPIError0 "email cannot be empty"
+// @Failure 400 {object} model.ApplicantSignupResponseAPIError1 "email already registered"
+// @Router /applicant_check_signup_email [post]
+func ApplicantCheckSignupEmail(env *Env) func(ctx *gin.Context) {
+	return CheckSignupEmail(env, "applicant")
 }
 
-func Signup(env *Env, category string) func(ctx *gin.Context) {
+func CheckSignupEmail(env *Env, category string) func(ctx *gin.Context) {
 	return func(ctx *gin.Context) {
 		params := readParams(ctx)
 		email := params["Email"]
@@ -70,7 +72,21 @@ func Signup(env *Env, category string) func(ctx *gin.Context) {
 	}
 }
 
-func ActivateEmail(env *Env) func(ctx *gin.Context) {
+// @Title ActivateAndSignup
+// @Summary ActivateAndSignup
+// @Description When user click on the GET link in user email, it will hit a frontend page as a GET request with
+// {Email, Token} as parameters. The frontend page should then provide user with a form that ask for (Email(prefilled),
+// Username, password, token(prefilled and hidden)). Once frontend gather all infos from the user, frontend should
+// POST call this [ActivateAndSignup endpoint] with a post request that has {email, username, password, token} as JSON
+// to sign the user up. This endpoint will both signup the user and activate their account.
+// @Accept  json
+// @Param body body model.ActivateAndSignupRequest true "ActivateAndSignupRequest is a POST JSON type"
+// @Success 200 {object} model.ActivateAndSignupResponseSuccess "Success: verification email sent"
+// @Failure 400 {object} model.ActivateAndSignupResponseAPIError0 "username already in use"
+// @Failure 400 {object} model.ActivateAndSignupResponseAPIError1 "invalid token"
+// @Failure 400 {object} model.ActivateAndSignupResponseAPIError2 "email already activated"
+// @Router /activate_and_signup [post]
+func ActivateAndSignup(env *Env) func(ctx *gin.Context) {
 	return func(ctx *gin.Context) {
 		params := readParams(ctx)
 		email := params["Email"]
@@ -87,6 +103,7 @@ func ActivateEmail(env *Env) func(ctx *gin.Context) {
 }
 
 // Login captures the data posted to the /login route
+// need to verify authtoken
 func Signin(env *Env) func(ctx *gin.Context) {
 	return func(ctx *gin.Context) {
 		params := readParams(ctx)
